force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Amount_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Budgeted__c</fullName>
    <description>The amount budgeted for this line item.</description>
    <label>Amount Budgeted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>