force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Budget__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Budget__c</fullName>
    <description>The master detail relationship to the budget.</description>
    <label>Budget</label>
    <referenceTo>LLC_BI__Budget__c</referenceTo>
    <relationshipLabel>Budget Line Item</relationshipLabel>
    <relationshipName>Budget_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>