force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>Administrators and users manually populate this optional field to track individual budget costs as a certain type (e.g. hard cost or soft cost).</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financing cost</fullName>
            </value>
            <value>
                <fullName>Hard cost</fullName>
            </value>
            <value>
                <fullName>Interest reserve</fullName>
            </value>
            <value>
                <fullName>Land cost</fullName>
            </value>
            <value>
                <fullName>Soft cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>