force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Notes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Notes__c</fullName>
    <description>Any notes about the budget line item.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>