force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Percent_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Disbursed__c</fullName>
    <description>The total percentage of the budget line item that has been disbursed.</description>
    <formula>IF(LLC_BI__Amount_Budgeted__c == 0, 0, LLC_BI__Total_Disbursed_Amount__c / LLC_BI__Amount_Budgeted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Disbursed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>