force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Percent_of_Budget__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_of_Budget__c</fullName>
    <description>The percentage of the overall budget represented by this budget line item.</description>
    <formula>LLC_BI__Amount_Budgeted__c / LLC_BI__Budget__r.LLC_BI__Total_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Budget</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>