force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Percent_Remaining_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Remaining_Disbursement__c</fullName>
    <description>The percentage of budget that remains for a specific line item.</description>
    <formula>IF(LLC_BI__Amount_Budgeted__c == 0, 0, LLC_BI__Remaining_Disbursement__c / LLC_BI__Amount_Budgeted__c)</formula>
    <label>Percent Remaining Disbursement</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>