force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Template_Percent_of_Budget__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template_Percent_of_Budget__c</fullName>
    <description>Enter the percent of the budget to automatically provision when a new budget is created.</description>
    <label>Template Percent of Budget</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>