force-app/main/default/objects/LLC_BI__Budget_Line_Item__c/fields/LLC_BI__Total_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Disbursed_Amount__c</fullName>
    <description>The sum of all disbursed funds against the budget line item.</description>
    <label>Total Disbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>